--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,8 +20,8 @@
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
-  --default-color: #272829; /* Default color used for the majority of the text content across the entire website */
-  --heading-color: #45505b; /* Color for headings, subheadings and title throughout the website */
+  --default-color: #ffffff; /* #272829 Default color used for the majority of the text content across the entire website */
+  --heading-color: #ffffff; /* #45505b Color for headings, subheadings and title throughout the website */
   --accent-color: #0563bb; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
@@ -62,7 +62,8 @@
 --------------------------------------------------------------*/
 body {
   color: var(--default-color);
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
+  background-image: url("../img/portfolio-bg.png");
   font-family: var(--default-font);
 }
 
@@ -153,6 +154,17 @@ h6 {
   overflow-y: auto;
   z-index: 997;
   min-width: 200px;
+}
+
+.mobile-only {
+  display: none;
+}
+
+/* Show the div when the screen width is 768px or less */
+@media (max-width: 1199px) {
+  .mobile-only {
+    display: block;
+  }
 }
 
 @media (max-width: 1199px) {
@@ -281,7 +293,7 @@ h6 {
 --------------------------------------------------------------*/
 .footer {
   color: var(--default-color);
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
   font-size: 14px;
   text-align: center;
   padding: 30px 0;
@@ -460,7 +472,7 @@ h6 {
 section,
 .section {
   color: var(--default-color);
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
   padding: 60px 0;
   overflow: clip;
 }
