--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #ffffff; /* #272829 Default color used for the majority of the text content across the entire website */
   --heading-color: #ffffff; /* #45505b Color for headings, subheadings and title throughout the website */
-  --accent-color: #0563bb; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --accent-color: #ffffff; /* #0563bb Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
 }
@@ -614,10 +614,11 @@ section,
 .about .content ul {
   list-style: none;
   padding: 0;
+  margin-bottom: 48px;
 }
 
 .about .content ul li {
-  margin-bottom: 20px;
+  margin-bottom: 12px;
   display: flex;
   align-items: center;
 }
@@ -631,6 +632,11 @@ section,
   margin-right: 5px;
   color: var(--accent-color);
   line-height: 0;
+}
+
+.about .content p {
+  margin-bottom: 24px; 
+  max-width: 480px;
 }
 
 /*--------------------------------------------------------------
