--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -901,8 +901,13 @@ section,
 /*--------------------------------------------------------------
 # Services Section
 --------------------------------------------------------------*/
+.services img{
+  width: 100%;
+  height: auto;
+  display: block;
+}
 .services .service-item {
-  background-color: var(--surface-color);
+  /* background-color: var(--surface-color); */
   box-shadow: 0px 5px 90px 0px rgba(0, 0, 0, 0.1);
   height: 100%;
   padding: 60px 30px;
