--- a/assets/css/healthhub.css
+++ b/assets/css/healthhub.css
@@ -2483,3 +2483,8 @@ section,
     padding-right: 96px !important; /* Add padding to the right */
   }
 }
+
+.security img {
+  pointer-events: none;
+  -webkit-user-drag: none;
+}
