--- a/assets/css/healthhub.css
+++ b/assets/css/healthhub.css
@@ -2438,6 +2438,62 @@ section,
   max-width: 100%; /* Ensure the container spans the full width by default */
   padding: 0; /* Remove padding */
 }
+.security img {
+  pointer-events: none;
+  -webkit-user-drag: none;
+}
+
+#prototype {
+  position: relative;
+  height:800px;
+  background-color: #1C2541;
+}
+
+.prototype-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute; /* Position the content inside the container */
+  top: 0; /* Adjust the vertical position */
+  left: 0; /* Adjust the horizontal position */
+  z-index: 10; /* Ensure it appears above the image */
+  width: 50%; /* Set the width of the container */
+  height: 100%; /* Set the height of the container */
+  /* border: 5px solid #C8C2AE; */
+  padding: 5%;
+}
+
+.prototype-text h1 {
+  font-family: "Rubik", Helvetica;
+  font-weight:500;
+  color:#ffffff;
+  font-size:64px;
+  text-align: center; /* Center the text */
+}
+
+.prototype-text h3 {
+  font-family: "Rubik", Helvetica;
+  font-weight: 500;
+  color:#d5c7bc;
+  font-size:36px;
+}
+
+.prototype-text li {
+  font-family: "Lato", Helvetica;
+  font-weight: 400;
+  color:#ffffff;
+  font-size:24px;
+}
+
+.prototype-space {
+  position: absolute; /* Position the content inside the container */
+  top: 0; /* Adjust the vertical position */
+  left: 50%; /* Adjust the horizontal position */
+  z-index: 10; /* Ensure it appears above the image */
+  width: 50%; /* Set the width of the container */
+  height: 100%; /* Set the height of the container */
+  /* border: 5px solid #C8C2AE; */
+}
 
 /* Override for larger screens (e.g., desktops) */
 @media (min-width: 768px) {
@@ -2448,6 +2504,22 @@ section,
   .container.navpadding {
     padding-left: 24px !important; /* Add padding to the left */
     padding-right: 24px !important; /* Add padding to the right */
+  }
+
+  /* .prototype-space{
+    border: 5px solid #ff002b;
+  } */
+
+  .prototype-text h1 {
+    font-size:32px;
+  }
+  
+  .prototype-text h3 {
+    font-size:20px;
+  }
+  
+  .prototype-text li {
+    font-size:12px;
   }
 }
 
@@ -2460,6 +2532,22 @@ section,
     padding-left: 48px !important; /* Add padding to the left */
     padding-right: 48px !important; /* Add padding to the right */
   }
+
+  /* .prototype-space{
+    border: 5px solid #bba800;
+  } */
+
+  .prototype-text h1 {
+    font-size:42px;
+  }
+  
+  .prototype-text h3 {
+    font-size:24px;
+  }
+  
+  .prototype-text li {
+    font-size:16px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -2470,6 +2558,22 @@ section,
   .container.navpadding {
     padding-left: 48px !important; /* Add padding to the left */
     padding-right: 48px !important; /* Add padding to the right */
+  }
+
+  /* .prototype-space{
+    border: 5px solid #00c3ff;
+  } */
+
+  .prototype-text h1 {
+    font-size:48px;
+  }
+  
+  .prototype-text h3 {
+    font-size:28px;
+  }
+  
+  .prototype-text li {
+    font-size:18px;
   }
 }
 
@@ -2482,9 +2586,20 @@ section,
     padding-left: 96px !important; /* Add padding to the left */
     padding-right: 96px !important; /* Add padding to the right */
   }
-}
 
-.security img {
-  pointer-events: none;
-  -webkit-user-drag: none;
+  /* .prototype-space{
+    border: 5px solid #00ff00;
+  } */
+
+  .prototype-text h1 {
+    font-size:64px;
+  }
+  
+  .prototype-text h3 {
+    font-size:36px;
+  }
+  
+  .prototype-text li {
+    font-size:24px;
+  }
 }
